--- a/index.html
+++ b/index.html
@@ -2,11 +2,89 @@
 <html>
 <head>
 <title>Page Title</title>
+  <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+  
+  <link rel="stylesheet" href="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.css">
+  <script src="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.js"></script>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div>
+<button class="close-all-apps btn btn-info" data-target="#myAppTray">Home</button>
+</div>
+<div class="app-tray spacing-2 bg-warning blured blured-dark" id="myAppTray">
+  <div class="app scale-with-screen glass active-size-70">
+    <div class="app-header app-icon">
+      <i class="fa fa-home"></i>
+    </div>
+    <div class="app-content">
+      <div>
+        <span>this is my content</span>
+        <span class="app-close pull-right"><i class="fa fa-close"></i></span>
+        <div>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Col 1</th>
+                <th>Col 2</th>
+                <th>Col 3</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>value 1a</td>
+                <td>value 2a</td>
+                <td>value 3a</td>
+              </tr>
+              <tr>
+                <td>value 1b</td>
+                <td>value 2b</td>
+                <td>value 3b</td>
+              </tr>
+              <tr>
+                <td>value 1c</td>
+                <td>value 2c</td>
+                <td>value 3c</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+    </div>
+    <div class="app-title">Home and other stuff</div>
+  </div>
+  <div class="app">
+    <div class="app-header app-icon">
+      <i class="fa fa-phone"></i>
+    </div>
+    <div class="app-content">
+      <span class="app-close pull-right"><i class="fa fa-close"></i></span>
+    </div>
+    <div class="app-title">Phone and other stuff</div>
+  </div>
+  <div class="app"></div>
+  <div class="app"></div>
+  <div class="app app-span-2 app-height-span-2">
+    <div class="app-header app-icon"><i class="fa fa-phone"></i></div>
+    <div class="app-content">Home and other stuff</div>
+    <div class="app-title">Home and other stuff</div>
+  </div>
+  <div class="app app-span-2"></div>
+  <div class="app app-span-2"></div>
+  <div class="app app-height-span-2"></div>
+  <div class="app app-height-span-2"></div>
+  <div class="app"></div>
+  <div class="app"></div>
+  <div class="app"></div>
+</div>
+
 
 </body>
 </html>
