--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script  type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   
   <link rel="stylesheet" href="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.css">
-  <script src="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.js"></script>
+  <script type="text/javascript" src="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.js"></script>
 </head>
 <body>
 
