--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   
-  <link rel="stylesheet" href="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.css">
-  <script type="text/javascript" src="https://github.com/JSystemsTech/AppFlow/blob/master/AppFlow.js"></script>
+  <link rel="stylesheet" href="AppFlow/AppFlow.css">
+  <script type="text/javascript" src="AppFlow/AppFlow.js"></script>
 </head>
 <body>
 
