--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   
-  <link rel="stylesheet" href="/css/AppFlow.css">
-  <script type="text/javascript" src="/AppFlow.js"></script>
+  <script type="text/javascript" src="https://JSystemsTech.github.com/AppFlow/AppFlow.css"></script>
+  <link rel="stylesheet" href="https://JSystemsTech.github.com/AppFlow/AppFlow.css">
+  
 </head>
 <body>
 
