--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   
-  <script type="text/javascript" src="https://JSystemsTech.github.com/AppFlow/AppFlow.css"></script>
-  <link rel="stylesheet" href="https://JSystemsTech.github.com/AppFlow/AppFlow.css">
+  <script type="text/javascript" src="{{ site.baseurl }}/AppFlow.js"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/AppFlow.css">
   
 </head>
 <body>
